--- a/charts/k8s-monitoring/docs/examples/features/prometheus-operator-objects/default/output.yaml
+++ b/charts/k8s-monitoring/docs/examples/features/prometheus-operator-objects/default/output.yaml
@@ -6,11 +6,11 @@ metadata:
   name: ko-alloy-metrics
   namespace: default
   labels:
-    helm.sh/chart: alloy-metrics-0.9.2
+    helm.sh/chart: alloy-metrics-0.10.1
     app.kubernetes.io/name: alloy-metrics
     app.kubernetes.io/instance: ko
     
-    app.kubernetes.io/version: "v1.4.3"
+    app.kubernetes.io/version: "v1.5.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
     app.kubernetes.io/component: rbac
@@ -168,11 +168,11 @@ kind: ClusterRole
 metadata:
   name: ko-alloy-metrics
   labels:
-    helm.sh/chart: alloy-metrics-0.9.2
+    helm.sh/chart: alloy-metrics-0.10.1
     app.kubernetes.io/name: alloy-metrics
     app.kubernetes.io/instance: ko
     
-    app.kubernetes.io/version: "v1.4.3"
+    app.kubernetes.io/version: "v1.5.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
     app.kubernetes.io/component: rbac
@@ -268,11 +268,11 @@ kind: ClusterRoleBinding
 metadata:
   name: ko-alloy-metrics
   labels:
-    helm.sh/chart: alloy-metrics-0.9.2
+    helm.sh/chart: alloy-metrics-0.10.1
     app.kubernetes.io/name: alloy-metrics
     app.kubernetes.io/instance: ko
     
-    app.kubernetes.io/version: "v1.4.3"
+    app.kubernetes.io/version: "v1.5.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
     app.kubernetes.io/component: rbac
@@ -291,11 +291,11 @@ kind: Service
 metadata:
   name: ko-alloy-metrics-cluster
   labels:
-    helm.sh/chart: alloy-metrics-0.9.2
+    helm.sh/chart: alloy-metrics-0.10.1
     app.kubernetes.io/name: alloy-metrics
     app.kubernetes.io/instance: ko
     
-    app.kubernetes.io/version: "v1.4.3"
+    app.kubernetes.io/version: "v1.5.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
     app.kubernetes.io/component: networking
@@ -324,11 +324,11 @@ kind: Service
 metadata:
   name: ko-alloy-metrics
   labels:
-    helm.sh/chart: alloy-metrics-0.9.2
+    helm.sh/chart: alloy-metrics-0.10.1
     app.kubernetes.io/name: alloy-metrics
     app.kubernetes.io/instance: ko
     
-    app.kubernetes.io/version: "v1.4.3"
+    app.kubernetes.io/version: "v1.5.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
     app.kubernetes.io/component: networking
@@ -350,11 +350,11 @@ kind: StatefulSet
 metadata:
   name: ko-alloy-metrics
   labels:
-    helm.sh/chart: alloy-metrics-0.9.2
+    helm.sh/chart: alloy-metrics-0.10.1
     app.kubernetes.io/name: alloy-metrics
     app.kubernetes.io/instance: ko
     
-    app.kubernetes.io/version: "v1.4.3"
+    app.kubernetes.io/version: "v1.5.1"
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/part-of: alloy
 spec:
@@ -378,7 +378,7 @@ spec:
       serviceAccountName: ko-alloy-metrics
       containers:
         - name: alloy
-          image: docker.io/grafana/alloy:v1.4.3
+          image: docker.io/grafana/alloy:v1.5.1
           imagePullPolicy: IfNotPresent
           args:
             - run
@@ -388,7 +388,7 @@ spec:
             - --server.http.ui-path-prefix=/
             - --cluster.enabled=true
             - --cluster.join-addresses=ko-alloy-metrics-cluster
-            - --cluster.name="alloy-metrics"
+            - --cluster.name=alloy-metrics
             - --stability.level=generally-available
           env:
             - name: ALLOY_DEPLOY_MODE
